Soap Test case added

--- a/report.html
+++ b/report.html
@@ -1582,22 +1582,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,73582],[[4,5,4,0,[],[1,26,73552],[[6,7,8,0,[],[1,31,73543],[[9,10,11,0,[],[1,34,73535],[],[[12,0,1,0,[13,14,15,16],[1,709,28243],[]],[17,0,1,18,[13,15,16,19],[1,28953,27163],[]],[20,0,1,21,[22,19],[1,56117,17451],[]]],[],[3,3,3,3]]],[],[],[3,3,3,3]]],[],[],[3,3,3,3]]],[],[],[3,3,3,3]];
+window.output["suite"] = [1,2,3,0,[],[0,0,1734],[[4,5,4,0,[],[0,27,1706],[[6,7,8,0,[],[0,31,1700],[[9,10,11,0,[],[0,34,1694],[],[[12,0,1,0,[],[0,812,915,13],[]]],[],[1,0,1,0]]],[],[],[1,0,1,0]]],[],[],[1,0,1,0]]],[],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*RobotPOC","*C:\\Users\\zapathan\\git\\RobotPOC","*.","*Test1","*C:\\Users\\zapathan\\git\\RobotPOC\\Test1","*TestCases","*C:\\Users\\zapathan\\git\\RobotPOC\\Test1\\TestCases","*Test1/TestCases","*TestCase1","*C:\\Users\\zapathan\\git\\RobotPOC\\Test1\\TestCases\\TestCase1.robot","*Test1/TestCases/TestCase1.robot","*TC1_Test","*Smoke","*SmokeTest","*Story: Given a search page when from and to destination are available Then User should be able to search for flights.","*Story: Login to Mercury Travels with user mercury/mercury","*TC2_Test","*<p>This will show on Allure Report Description\x3c/p>","*TestSuite1","*TC3_Test","*<p>This will register User\x3c/p>","*RegisterUser"]);
+window.output["strings"] = window.output["strings"].concat(["*","*RobotPOC","*C:\\Users\\zapathan\\git\\RobotPOC","*.","*Test1","*C:\\Users\\zapathan\\git\\RobotPOC\\Test1","*TestCases","*C:\\Users\\zapathan\\git\\RobotPOC\\Test1\\TestCases","*Test1/TestCases","*SoapTest1","*C:\\Users\\zapathan\\git\\RobotPOC\\Test1\\TestCases\\SoapTest1.robot","*Test1/TestCases/SoapTest1.robot","*TestSoapWS","*TransportError: HTTP Error 401: Authorization Required"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:01:13","fail":0,"label":"Critical Tests","pass":3},{"elapsed":"00:01:13","fail":0,"label":"All Tests","pass":3}],[{"elapsed":"00:00:17","fail":0,"label":"RegisterUser","pass":1},{"elapsed":"00:00:55","fail":0,"label":"Smoke","pass":2},{"elapsed":"00:00:28","fail":0,"label":"SmokeTest","pass":1},{"elapsed":"00:00:55","fail":0,"label":"Story: Given a search page when from and to destination are available Then User should be able to search for flights.","pass":2},{"elapsed":"00:00:55","fail":0,"label":"Story: Login to Mercury Travels with user mercury/mercury","pass":2},{"elapsed":"00:00:45","fail":0,"label":"TestSuite1","pass":2}],[{"elapsed":"00:01:14","fail":0,"id":"s1","label":"RobotPOC","name":"RobotPOC","pass":3},{"elapsed":"00:01:14","fail":0,"id":"s1-s1","label":"RobotPOC.Test1","name":"Test1","pass":3},{"elapsed":"00:01:14","fail":0,"id":"s1-s1-s1","label":"RobotPOC.Test1.TestCases","name":"TestCases","pass":3},{"elapsed":"00:01:14","fail":0,"id":"s1-s1-s1-s1","label":"RobotPOC.Test1.TestCases.TestCase1","name":"TestCase1","pass":3}]];
+window.output["stats"] = [[{"elapsed":"00:00:01","fail":1,"label":"Critical Tests","pass":0},{"elapsed":"00:00:01","fail":1,"label":"All Tests","pass":0}],[],[{"elapsed":"00:00:02","fail":1,"id":"s1","label":"RobotPOC","name":"RobotPOC","pass":0},{"elapsed":"00:00:02","fail":1,"id":"s1-s1","label":"RobotPOC.Test1","name":"Test1","pass":0},{"elapsed":"00:00:02","fail":1,"id":"s1-s1-s1","label":"RobotPOC.Test1.TestCases","name":"TestCases","pass":0},{"elapsed":"00:00:02","fail":1,"id":"s1-s1-s1-s1","label":"RobotPOC.Test1.TestCases.SoapTest1","name":"SoapTest1","pass":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1538745283884;
+window.output["baseMillis"] = 1538977705238;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 73637;
+window.output["generated"] = 1748;
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","title":""};
