Updated Soap test

--- a/report.html
+++ b/report.html
@@ -1582,22 +1582,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,1734],[[4,5,4,0,[],[0,27,1706],[[6,7,8,0,[],[0,31,1700],[[9,10,11,0,[],[0,34,1694],[],[[12,0,1,0,[],[0,812,915,13],[]]],[],[1,0,1,0]]],[],[],[1,0,1,0]]],[],[],[1,0,1,0]]],[],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,34128],[[4,5,4,0,[],[0,43,34080],[[6,7,8,0,[],[0,52,34065],[[9,10,11,0,[],[0,57,3377],[],[[12,0,1,0,[],[0,2751,681,13],[]]],[],[1,0,1,0]],[14,15,16,0,[],[0,3438,30671],[],[[17,0,1,0,[18],[0,3484,11523,19],[]],[20,0,1,21,[22],[0,15009,9247,19],[]],[23,0,1,24,[22],[0,24258,9849,19],[]]],[],[3,0,3,0]]],[],[],[4,0,4,0]]],[],[],[4,0,4,0]]],[],[],[4,0,4,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*RobotPOC","*C:\\Users\\zapathan\\git\\RobotPOC","*.","*Test1","*C:\\Users\\zapathan\\git\\RobotPOC\\Test1","*TestCases","*C:\\Users\\zapathan\\git\\RobotPOC\\Test1\\TestCases","*Test1/TestCases","*SoapTest1","*C:\\Users\\zapathan\\git\\RobotPOC\\Test1\\TestCases\\SoapTest1.robot","*Test1/TestCases/SoapTest1.robot","*TestSoapWS","*TransportError: HTTP Error 401: Authorization Required"]);
+window.output["strings"] = window.output["strings"].concat(["*","*RobotPOC","*C:\\Users\\zapathan\\git\\RobotPOC","*.","*Test1","*C:\\Users\\zapathan\\git\\RobotPOC\\Test1","*TestCases","*C:\\Users\\zapathan\\git\\RobotPOC\\Test1\\TestCases","*Test1/TestCases","*SoapTest1","*C:\\Users\\zapathan\\git\\RobotPOC\\Test1\\TestCases\\SoapTest1.robot","*Test1/TestCases/SoapTest1.robot","*TestSoapWS","*TransportError: HTTP Error 401: Authorization Required","*TestCase1","*C:\\Users\\zapathan\\git\\RobotPOC\\Test1\\TestCases\\TestCase1.robot","*Test1/TestCases/TestCase1.robot","*TC1_Test","*SmokeTest","*WebDriverException: Message: Service chromedriver unexpectedly exited. Status code was: 0\n","*TC2_Test","*<p>This will show on Allure Report Description\x3c/p>","*TestSuite1","*TC3_Test","*<p>This will register User\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:01","fail":1,"label":"Critical Tests","pass":0},{"elapsed":"00:00:01","fail":1,"label":"All Tests","pass":0}],[],[{"elapsed":"00:00:02","fail":1,"id":"s1","label":"RobotPOC","name":"RobotPOC","pass":0},{"elapsed":"00:00:02","fail":1,"id":"s1-s1","label":"RobotPOC.Test1","name":"Test1","pass":0},{"elapsed":"00:00:02","fail":1,"id":"s1-s1-s1","label":"RobotPOC.Test1.TestCases","name":"TestCases","pass":0},{"elapsed":"00:00:02","fail":1,"id":"s1-s1-s1-s1","label":"RobotPOC.Test1.TestCases.SoapTest1","name":"SoapTest1","pass":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:31","fail":4,"label":"Critical Tests","pass":0},{"elapsed":"00:00:31","fail":4,"label":"All Tests","pass":0}],[{"elapsed":"00:00:12","fail":1,"label":"SmokeTest","pass":0},{"elapsed":"00:00:19","fail":2,"label":"TestSuite1","pass":0}],[{"elapsed":"00:00:34","fail":4,"id":"s1","label":"RobotPOC","name":"RobotPOC","pass":0},{"elapsed":"00:00:34","fail":4,"id":"s1-s1","label":"RobotPOC.Test1","name":"Test1","pass":0},{"elapsed":"00:00:34","fail":4,"id":"s1-s1-s1","label":"RobotPOC.Test1.TestCases","name":"TestCases","pass":0},{"elapsed":"00:00:03","fail":1,"id":"s1-s1-s1-s1","label":"RobotPOC.Test1.TestCases.SoapTest1","name":"SoapTest1","pass":0},{"elapsed":"00:00:31","fail":3,"id":"s1-s1-s1-s2","label":"RobotPOC.Test1.TestCases.TestCase1","name":"TestCase1","pass":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1538977705238;
+window.output["baseMillis"] = 1538979374244;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 1748;
+window.output["generated"] = 34159;
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","title":""};
