Added Soap Requests and global variables resource files

--- a/report.html
+++ b/report.html
@@ -1582,22 +1582,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,1015],[[4,5,4,0,[],[0,36,977],[[6,7,8,0,[],[0,41,970],[[9,10,11,0,[],[0,45,962],[],[[12,0,1,0,[],[0,949,57,13],[]]],[],[1,0,1,0]]],[],[],[1,0,1,0]]],[],[],[1,0,1,0]]],[],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,304461],[[4,5,4,0,[],[0,20,304435],[[6,7,8,0,[],[0,22,304427],[[9,10,11,0,[],[0,24,304417],[],[[12,0,1,0,[13,14,15,16],[1,452,207806],[]],[17,0,1,18,[13,15,16,19],[1,208261,84789],[]],[20,0,1,21,[22,19],[0,293053,11385,23],[]]],[],[3,2,3,2]]],[],[],[3,2,3,2]]],[],[],[3,2,3,2]]],[],[],[3,2,3,2]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*RobotPOC","*C:\\Users\\zapathan\\git\\RobotPOC","*.","*Test1","*C:\\Users\\zapathan\\git\\RobotPOC\\Test1","*TestCases","*C:\\Users\\zapathan\\git\\RobotPOC\\Test1\\TestCases","*Test1/TestCases","*SoapTest1","*C:\\Users\\zapathan\\git\\RobotPOC\\Test1\\TestCases\\SoapTest1.robot","*Test1/TestCases/SoapTest1.robot","*TestSoapWS2","*TransportError: HTTP Error 401: Authorization Required"]);
+window.output["strings"] = window.output["strings"].concat(["*","*RobotPOC","*C:\\Users\\parvyas\\git\\RobotPOC","*.","*Test1","*C:\\Users\\parvyas\\git\\RobotPOC\\Test1","*TestCases","*C:\\Users\\parvyas\\git\\RobotPOC\\Test1\\TestCases","*Test1/TestCases","*UI Test","*C:\\Users\\parvyas\\git\\RobotPOC\\Test1\\TestCases\\UI_Test.robot","*Test1/TestCases/UI_Test.robot","*Book_Flight_Return","*Smoke","*SmokeTest","*Story: Given a search page when from and to destination are available Then User should be able to search for flights.","*Story: Login to Mercury Travels with user mercury/mercury","*Book_Flight_Oneway","*<p>This will show on Allure Report Description\x3c/p>","*UI_TestSuite","*Register_User","*<p>This will register User\x3c/p>","*RegisterUser","*Element with locator 'city' not found."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":1,"label":"Critical Tests","pass":0},{"elapsed":"00:00:00","fail":1,"label":"All Tests","pass":0}],[],[{"elapsed":"00:00:01","fail":1,"id":"s1","label":"RobotPOC","name":"RobotPOC","pass":0},{"elapsed":"00:00:01","fail":1,"id":"s1-s1","label":"RobotPOC.Test1","name":"Test1","pass":0},{"elapsed":"00:00:01","fail":1,"id":"s1-s1-s1","label":"RobotPOC.Test1.TestCases","name":"TestCases","pass":0},{"elapsed":"00:00:01","fail":1,"id":"s1-s1-s1-s1","label":"RobotPOC.Test1.TestCases.SoapTest1","name":"SoapTest1","pass":0}]];
+window.output["stats"] = [[{"elapsed":"00:05:04","fail":1,"label":"Critical Tests","pass":2},{"elapsed":"00:05:04","fail":1,"label":"All Tests","pass":2}],[{"elapsed":"00:00:11","fail":1,"label":"RegisterUser","pass":0},{"elapsed":"00:04:53","fail":0,"label":"Smoke","pass":2},{"elapsed":"00:03:28","fail":0,"label":"SmokeTest","pass":1},{"elapsed":"00:04:53","fail":0,"label":"Story: Given a search page when from and to destination are available Then User should be able to search for flights.","pass":2},{"elapsed":"00:04:53","fail":0,"label":"Story: Login to Mercury Travels with user mercury/mercury","pass":2},{"elapsed":"00:01:36","fail":1,"label":"UI_TestSuite","pass":1}],[{"elapsed":"00:05:04","fail":1,"id":"s1","label":"RobotPOC","name":"RobotPOC","pass":2},{"elapsed":"00:05:04","fail":1,"id":"s1-s1","label":"RobotPOC.Test1","name":"Test1","pass":2},{"elapsed":"00:05:04","fail":1,"id":"s1-s1-s1","label":"RobotPOC.Test1.TestCases","name":"TestCases","pass":2},{"elapsed":"00:05:04","fail":1,"id":"s1-s1-s1-s1","label":"RobotPOC.Test1.TestCases.UI Test","name":"UI Test","pass":2}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1539000693899;
+window.output["baseMillis"] = 1539165202137;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 1030;
+window.output["generated"] = 304504;
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","title":""};
